# defi-rewards-proto

./: .gitignore  README.md  poor_man_test.sh
js/: main.js  package.json
programs/: Cargo.toml
programs/scripts/: cargo-fmt.sh  deploy.sh  logs.sh  solana-version.sh
programs/src/: entrypoint.rs  errors.rs  lib.rs  mod.rs  processor.rs  state.rs
programs/src/instructions/: initialize_mint.rs  mint.rs  mod.rs
