[package]
name = "rewards"
version = "0.1.0"
description = "My Rewards Protocol"
edition = "2021"
authors = ["mwrites <mwrites.pub@pm.me>"]
repository = "https://github.com/mwrites/TODO"
license = "Apache-2.0"
keywords = ["solana", "anchor", "defi", "token"]

[features]
no-entrypoint = []

[lib]
crate-type = ["cdylib", "lib"]
name = "rewards"

[dependencies]
borsh = "0.9.3"
num-derive = "0.3.3"
num-traits = "0.2.15"
solana-program = "1.14.4"
spl-associated-token-account = { version = "1.1.1", features = ["no-entrypoint"] }
spl-token = { version="3.5.0", features = [ "no-entrypoint" ] }
thiserror = "1.0.37"
